Prevent Contacts from collapsing when resizing

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -398,6 +398,7 @@
     position: relative;
     margin-top: 15px;
     margin-bottom: 15px;
+    width: 545px;
 }
 
 .stories {
@@ -615,6 +616,7 @@
 .home-body-right {
     position: relative;
     width: 250px;
+    margin-left: 1rem;
     /* background-color: lightgreen; */
 }
 
@@ -622,6 +624,7 @@
     display: flex;
     flex-direction: column;
     /* gap: 10px; */
+    width: 250px;
 }
 
 .contacts-title {
